src/objects/ADvendio__Pricelist__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ADvendio__Valid_from__c</fullName>
        <label>Valid from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__Valid_to__c</fullName>
        <label>Valid to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mig_CountPrices__c</fullName>
        <label>Mig_CountPrices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mig_ProdiaKey__c</fullName>
        <description>Eindeutiger Schlüssel aus ProDia, der für Abgleich bei Migrataion benötigt wird</description>
        <externalId>true</externalId>
        <inlineHelpText>Eindeutiger Schlüssel aus ProDia, der für Abgleich bei Migrataion benötigt wird</inlineHelpText>
        <label>Mig_ProdiaKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomDig_AuftragstypId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Steuert die Auslieferungsprioritäten in den AdServern, die Einschränkung auf mögliche Produkte/Werbemittel, ggf. auch Steuerung von fixem FC bei einigen Auftragstypen &amp; Voreinstellung der Rechnungsstellung etc.</description>
        <inlineHelpText>Bitte die Auftragstypen angeben. Diese steuert die Auslieferungsprioritäten in den AdServern, die Einschränkung auf mögliche Produkte/Werbemittel, ggf. auch Steuerung von fixem FC bei einigen Auftragstypen &amp; Voreinstellung der Rechnungsstellung etc.</inlineHelpText>
        <label>Auftragstyp</label>
        <referenceTo>SomDig_Auftragstyp__c</referenceTo>
        <relationshipLabel>Preislisten</relationshipLabel>
        <relationshipName>Preislisten</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Auftragstyp__c</fullName>
        <description>Hilfsfeld für die DWH-Schnittstelle. Liefert Auftragstyp als Text.</description>
        <formula>SomDig_AuftragstypId__r.Name</formula>
        <inlineHelpText>Hilfsfeld für die DWH-Schnittstelle. Liefert Auftragstyp als Text.</inlineHelpText>
        <label>Auftragstyp DWH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Beschreibung__c</fullName>
        <description>Beschreibung der Preisliste</description>
        <inlineHelpText>Beschreibung der Preisliste</inlineHelpText>
        <label>Beschreibung</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SomDig_DWHGeschaeftsart__c</fullName>
        <description>DWH Geschäftsart mit/ohne Commitment</description>
        <inlineHelpText>DWH Geschäftsart mit/ohne Commitment (bei Eigenwerbung nur &apos;ohne Commitment&apos;)</inlineHelpText>
        <label>DWH Geschäftsart</label>
        <type>Phone</type>
    </fields>
    <label>Rate Card</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>SomDig_AuftragstypId__c</columns>
        <columns>SomDig_DWHGeschaeftsart__c</columns>
        <columns>SomDig_Beschreibung__c</columns>
        <columns>ADvendio__Valid_from__c</columns>
        <columns>ADvendio__Valid_to__c</columns>
        <columns>Mig_CountPrices__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>P7S1_IdOld__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Preislisten_2016</fullName>
        <columns>NAME</columns>
        <columns>SomDig_AuftragstypId__c</columns>
        <columns>SomDig_DWHGeschaeftsart__c</columns>
        <columns>SomDig_Beschreibung__c</columns>
        <columns>ADvendio__Valid_from__c</columns>
        <columns>ADvendio__Valid_to__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Mig_CountPrices__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>P7S1_IdOld__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2016</value>
        </filters>
        <label>Preislisten 2016</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Rate Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>